--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -17,40 +17,45 @@
   object-fit: cover;
 }
 
-.search-container {
-  position: absolute;
+.search-container{
+  /* position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(255, 255, 255, 0.8);
-  /* padding: 1rem; */
+  padding: 1rem;
   border-radius: 1rem;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
 }
 
 .search-container form {
-  border-radius: 1rem;
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
+  /* border-radius: 1rem;
+  display: flex;
+  justify-content: left;
+  align-items: left; */
 }
 
 .search-container input[type="text"] {
-  /* width: 70%; */
-  padding: 0.5rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #e8f0ea;
+  color: rgb(5, 0, 0);
+  padding: 10px 20px;
   border: none;
-  border-radius: 0.5rem;
-  font-size: 1.2rem;
+  cursor: pointer;
+  font-size: 16px;
+  width: 400px;
+  opacity: 80%;
+ 
 }
 
-.search-container button[type="submit"] {
-  padding: 0.5rem;
-  border: none;
-  border-radius: 0.5rem;
-  background-color: dodgerblue;
-  color: white;
-  font-size: 1.2rem;
-  cursor: pointer;
+.search button.seacrh[type="submit"] {
+  position: absolute;
+  top: 55%;
+  left: 90%;
+  
 }
 
 .products-section {
