--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #f3dff1;
 }
 
 .hero-section {
@@ -60,26 +61,39 @@
 
 .products-section {
   width: 80%;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
+  background-color: #ffffff;
+}
+
+.new{
+  display: flex;
+  width:1200px;
+  height:fit-content; 
+}
+.new h2{
+  font-size: 2rem;
+  text-align: left;
+
 }
 
 .products-section h2 {
-  text-align: center;
+  text-align: left;
   font-size: 2rem;
 }
 .products-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 2rem 0;
 }
 
 .product-card {
-  width: 300px;
-  height: 400px;
+  width: 250px;
+  height: 325px;
   border: 1px solid #ccc;
   border-radius: 10px;
   overflow: hidden;
+  background-color: #9d73c7;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   margin: 1rem;
   text-align: center;
@@ -88,7 +102,7 @@
 
 .product-card img {
   width: 100%;
-  height: 200px;
+  height: 175px;
   object-fit: cover;
 }
 
@@ -98,9 +112,9 @@
 }
 
 .product-card p {
-  font-size: 0.8rem;
-  color: #777;
-  margin-top: 0.5rem;
+  font-size: 15px;
+  color: #e8e1e1;
+  margin-top: 2px;
 }
 
 .product-card button {
@@ -115,5 +129,7 @@
   border-radius: 5px;
   font-weight: bold;
   cursor: pointer;
+  width:100px;
+  height: 45px;
 }
 
