--- a/client/src/css/otp.css
+++ b/client/src/css/otp.css
@@ -4,7 +4,7 @@
 	box-sizing: border-box;
 }
 
-body {
+body.otp {
 	background: #9d73c7;
 	display: flex;
 	/* justify-content: center;
@@ -14,9 +14,7 @@ body {
 	height: 100vh;
 	margin: -20px 0 50px;
 }
-h2 {
-	text-align: center;
-}
+
 p.otp {
 	font-size: 14px;
 	font-weight: 100;
@@ -41,6 +39,9 @@ form.otp {
 	padding: 0 40px;
 	height: 220px;
 	text-align: center;
+	width: 305px;
+	margin-left: 40%;
+	margin-top: 10%;
 }
 input.otp {
 	background-color: #eee;
