--- a/client/src/css/productDes.css
+++ b/client/src/css/productDes.css
@@ -27,39 +27,39 @@
 
 .row{
     display: flex;
-    gap: 20px;
+    border-radius: 10px;
+    
 }
 
 .col-6{
     width: 50%;
+    background-color: white;
+    border-radius:0px 10px 10px 0px;
+
 }
 
 .single-product{
     width: 1080px;
     position: relative;
+    border-radius: 10px;
 }
-/** Breadcrumb **/
 
 
 /** product image **/
 
 .single-product .product-image{
     width: 100%;
+    border-radius: 10px 0px 0px 10px;
 }
 
-.product-image .product-image-main{
-    position: relative;
-    display: block;
-    height: 480px;
-    background: var(--bg-grey);
-    padding: 10px;
-}
+
 
 .product-image-main img{
     display: block;
     width: 100%;
     height: 100%;
     object-fit: contain;
+    border-radius: 10px 0px 0px 10px;
 }
 
 
@@ -67,6 +67,7 @@
 
 .product-title{
     margin-top: 20px;
+    margin-left: 10px;
 
 }
 .product-title h2{
@@ -74,19 +75,17 @@
     line-height: 2.4rem;
     font-weight: 700;
     letter-spacing: -0.02rem;
+    margin-left: 10px;
 }
 
-/** product rating **/
 
-/** Product price **/
-.product-price{
+
+.product-price .offer-price{
     display: flex;
     position: relative;
     margin: 10px 0;
     align-items: center;
-}
-
-.product-price .offer-price{
+    margin-left: 20px;
     font-size: 48px;
     font-weight: 700;
 }
@@ -95,15 +94,18 @@
 /** Product Details **/
 .product-details{
     margin: 10px 0;
+    margin-left: 10px;
 }
 .product-details h3{
     font-size: 18px;
     font-weight: 500;
+    margin-left: 10px;
 }
 .product-details p{
     margin: 5px 0;
     font-size: 14px;
     line-height: 1.2rem;
+    margin-left: 10px;
 }
 
 
@@ -120,10 +122,13 @@
 /** product Button Group **/
 
 .product-btn-group{
+   
     display: flex;
     gap: 15px;
-    align-items:last baseline;
+    justify-self: flex-end;
+    
 }
+
 .product-btn-group .button{
     display: flex;
     align-items: center;
@@ -163,16 +168,7 @@
     background: var(--grey);
     color: #fff;
 }
-.product-btn-group .heart{
-    color: var(--grey);
-    cursor: pointer;
-}
-.product-btn-group .heart i{
-    font-size: 20px;
-}
-.product-btn-group .heart:hover{
-    color: var(--accent-color);
-}
+
 
 
 /** Responsive Mobile **/
@@ -188,6 +184,7 @@
     .col-6{
         width: 100%;
         display: block;
+        background-color: antiquewhite;
     }
     .single-product{
         width: 100%;
@@ -228,7 +225,6 @@
     }
 }
 
-/** Responsive Tablet **/
 @media  (min-width: 520px ) and (max-width: 1080px) {
    .container{
     display: block;
