--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -91,31 +91,41 @@
 .product-card {
   width: 250px;
   height: 325px;
-  border: 1px solid #ccc;
+  border: 1px solid #a998ad;
   border-radius: 10px;
   overflow: hidden;
-  background-color: #697624;
+  background-color: #42423d;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   margin: 1rem;
   text-align: center;
   position: relative;
 }
+.product-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
 
 .product-card img {
   width: 100%;
-  height: 175px;
+  height: 250px;
   object-fit: cover;
 }
 
 .product-card h3 {
   margin-top: 1rem;
   font-weight: bold;
+  margin-bottom: -10px;
 }
 
 .product-card p {
   font-size: 15px;
-  color: #e8e1e1;
-  margin-top: 2px;
+  color: #ffffff;
+  margin-bottom: 10px;
+}
+
+.product-card:hover .product-content {
+  background-color: rgba(255, 255, 255, 1);
+  transform: translateY(-30%);
 }
 
  .button {
