--- a/client/src/css/cart.css
+++ b/client/src/css/cart.css
@@ -93,7 +93,79 @@
 .modal-form {
   background-color: white;
   padding: 20px;
+  border-radius: 24px;
+  width: 30%;
+  height: 45%;
+  
+  
 }
+  .modal-input{
+    border-radius: 12px;
+  }
+
+  .modal-h2{
+    text-align: center;
+    font-family: "Times New Roman", Times, serif;
+  }
+
+  .modal-button{
+  
+      appearance: none;
+      backface-visibility: hidden;
+      background-color: #27ae60;
+      border-radius: 8px;
+      border-style: none;
+      box-shadow: rgba(39, 174, 96, .15) 0 4px 9px;
+      box-sizing: border-box;
+      color: #fff;
+      cursor: pointer;
+      display: inline-block;
+      font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
+      font-size: 12px;
+      font-weight: 600;
+      letter-spacing: normal;
+      line-height: 1.5;
+      outline: none;
+      overflow: hidden;
+      padding: 13px 20px;
+      position: relative;
+      text-align: center;
+      text-decoration: none;
+      transform: translate3d(0, 0, 0);
+      transition: all .3s;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+      vertical-align: top;
+      white-space: nowrap;
+      /* margin-left: 37%; */
+      margin-top: 15px;
+   
+    }
+    
+    .modal-button:hover {
+      background-color: #1e8449;
+      opacity: 1;
+      transform: translateY(0);
+      transition-duration: .35s;
+    }
+    
+    .modal-button:active {
+      transform: translateY(2px);
+      transition-duration: .35s;
+    }
+    
+    .modal-button:hover {
+      box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
+    }
+
+    .model-cross{
+      /* display: flex; */
+      margin-left: 395px;
+     
+    }
+
+
 
 
 
