--- a/client/src/css/admin.css
+++ b/client/src/css/admin.css
@@ -23,6 +23,24 @@
     background-color: #005ea6;
   }
 
+  .adm-container {
+    display: flex;
+    justify-content: center;
+    background-color: DodgerBlue;
+    margin-left: 11%;
+    margin-top: 5%;
+  }
+  
+  .box {
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin: 10px;
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 600px;
+  }
+  
+
   
 
   table {
