--- a/client/src/css/add.css
+++ b/client/src/css/add.css
@@ -4,7 +4,7 @@
 	margin: 10px auto;
 	padding: 16px;
 	background: #F7F7F7;
-    margin-top: 50px;
+    /* margin-top: 150px; */
 }
 .form-style-6 h1{
 	background: #43D1AF;
