--- a/client/src/css/admin.css
+++ b/client/src/css/admin.css
@@ -1,36 +1,39 @@
-.main-content {
-    margin-left: 220px; 
-    padding: 20px;
-    width: 80%; 
-    background-color: #fff;
-  }
-
-  .main-content_h2 {
-    margin-left: 30px; 
-    
-  }
-  .main-content_button {
-    background-color: #01090e;
-    color: #fff;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-  }
+ .main-content {
+  margin-left: 220px; 
+  /* padding: 20px; */
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 80%; 
+  background-color: #fff;
   
-  .button:hover {
-    background-color: #005ea6;
-  }
+}
 
-  .adm-container {
-    display: flex;
-    justify-content: center;
-    background-color: DodgerBlue;
-    margin-left: 11%;
-    margin-top: 5%;
-  }
+.main-content_h2 {
+  margin-left: 30px; 
   
+}
+.main-content_button {
+  background-color: #01090e;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.button:hover {
+  background-color: #005ea6;
+}
+
+/* .adm-container {
+  display: flex;
+  justify-content: center;
+  background-color: DodgerBlue;
+  margin-left: 11%;
+  margin-top: 5%;
+} */
+/*   
   .box {
     background-color: #f2f2f2;
     padding: 20px;
@@ -38,7 +41,7 @@
     box-sizing: border-box;
     width: 100%;
     max-width: 600px;
-  }
+  } */
   
 
   
@@ -47,7 +50,7 @@
     font-family: Arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
-    margin-top: 30px;
+    /* margin-top: 130px; */
     margin-left: 30px;
   }
   
@@ -73,3 +76,13 @@
     color: #01090e;
   }
   
+
+
+  /************************************************************************************
+  */
+
+  
+  
+
+  
+ 
