--- a/client/src/css/add.css
+++ b/client/src/css/add.css
@@ -4,7 +4,9 @@
 	margin: 10px auto;
 	padding: 16px;
 	background: #F7F7F7;
-    /* margin-top: 150px; */
+    margin-top: 50px;
+	justify-content: center;
+	
 }
 .form-style-6 h1{
 	background: #43D1AF;
@@ -63,9 +65,11 @@
 }
 
 .add-button{
+
 	background-color: #27ae60; 
 	margin-top: 30px;
-	float: right;
+	margin-left: 340px;
+	/* float: right; */
 }
 
 .add-button:hover {
