--- a/client/src/css/stats.css
+++ b/client/src/css/stats.css
@@ -1,21 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
   
-/* .home-section *{
+.home-section *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-  } */
+  }
 
   .home-section{
     position: relative;
     background: #f5f5f5;
     /* min-height: 100vh; */
     width: calc(100% - 240px);
-    left: 250px;
+    left: 240px;
     transition: all 0.5s ease;
-    /* top:90px; */
+    top:30px;
   }
 
   .home-content{
