--- a/client/src/css/admin.css
+++ b/client/src/css/admin.css
@@ -4,7 +4,7 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 20px;
-  width: 90%; 
+  width: 85%; 
   background: #f5f5f5;
   margin-top: 20px;
   
@@ -55,6 +55,7 @@
     width: 100%;
     /* margin-top: 130px; */
     margin-left: 30px;
+    text-transform: capitalize;
   }
   
   td, th {
@@ -77,6 +78,7 @@
 
   .link{
     color: #01090e;
+    
   }
   
   .recent{
@@ -100,6 +102,7 @@
     font-size:20px;
     font-weight: 400;
     margin-top: 15px;
+    text-transform: capitalize;
   }
 
   .recent ul{
