--- a/client/src/css/productDes.css
+++ b/client/src/css/productDes.css
@@ -119,7 +119,24 @@
 }
 
 .product-page button:hover {
-	background-color: #d95c71;
+	background-color: #2a0e4c;
+}
+
+.product-page .remove{
+	border-radius: 10px;
+	border: 1px solid #eae7ed;
+	background-color: #d53609;
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
+	margin-left:20px;
+	margin-top: 15px;
+	width:fit-content;
+
 }
 
   
