--- a/client/src/css/productDes.css
+++ b/client/src/css/productDes.css
@@ -62,6 +62,12 @@
 
 }
 
+.product-page .desc{
+	height:200px;
+	width:500px;
+	white-space: pre-wrap;
+}
+
 .product-page label {
 	font-size: 1.2em;
 	margin-bottom: 10px;
@@ -90,6 +96,8 @@
 	border-radius: 4px;
 	padding: 4px;
   }
+
+  
 
   .product-add{
 	width:50%;
